--- a/source/sass/global/fonts.scss
+++ b/source/sass/global/fonts.scss
@@ -1,54 +1,65 @@
 @font-face {
   font-style: normal;
   font-weight: 400;
-  font-family: "Roboto Condensed";
+  font-family: "OpenSans";
 
   font-display: swap;
   src:
-    url("../fonts/Roboto-Condensed.woff2") format("woff2"),
-    url("../fonts/Roboto-Condensed.woff") format("woff");
+    url("../fonts/OpenSans-Regular.woff2") format("woff2"),
+    url("../fonts/OpenSans-Regular.woff") format("woff");
+}
+
+@font-face {
+  font-style: italic;
+  font-weight: 400;
+  font-family: "OpenSans";
+
+  font-display: swap;
+  src:
+    url("../fonts/OpenSans-Italic.woff2") format("woff2"),
+    url("../fonts/OpenSans-Italic.woff") format("woff");
 }
 
 @font-face {
   font-style: normal;
-  font-weight: 300;
-  font-family: "Roboto Condensed";
+  font-weight: 600;
+  font-family: "OpenSans";
 
   font-display: swap;
   src:
-    url("../fonts/RobotoCondensed-Light.woff2") format("woff2"),
-    url("../fonts/RobotoCondensed-Light.woff") format("woff");
-}
-
-@font-face {
-  font-style: normal;
-  font-weight: 700;
-  font-family: "Roboto Condensed";
-
-  font-display: swap;
-  src:
-    url("../fonts/RobotoCondensed-Bold.woff2") format("woff2"),
-    url("../fonts/RobotoCondensed-Bold.woff") format("woff");
+    url("../fonts/OpenSans-SemiBold.woff2") format("woff2"),
+    url("../fonts/OpenSans-SemiBold.woff") format("woff");
 }
 
 @font-face {
   font-style: normal;
   font-weight: 400;
-  font-family: "Bebas Neue";
+  font-family: "PlayfairDisplay";
 
   font-display: swap;
   src:
-    url("../fonts/BebasNeue-Regular.woff2") format("woff2"),
-    url("../fonts/BebasNeue-Regular.woff") format("woff");
+    url("../fonts/PlayfairDisplay-Regular.woff2") format("woff2"),
+    url("../fonts/PlayfairDisplay-Regular.woff") format("woff");
 }
 
 @font-face {
   font-style: normal;
   font-weight: 700;
-  font-family: "Bebas Neue";
+  font-family: "PlayfairDisplay";
 
   font-display: swap;
   src:
-    url("../fonts/BebasNeue-Bold.woff2") format("woff2"),
-    url("../fonts/BebasNeue-Bold.woff") format("woff");
+    url("../fonts/PlayfairDisplay-Bold.woff2") format("woff2"),
+    url("../fonts/PlayfairDisplay-Bold.woff") format("woff");
+}
+
+@font-face {
+  font-style: normal;
+  font-weight: 400;
+  font-family: "Roboto";
+
+  font-display: swap;
+  src:
+    url("../fonts/Roboto-Regular.woff2") format("woff2"),
+    url("../fonts/Roboto-Regular.woff") format("woff");
 }
