--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -3,6 +3,9 @@
 
 // Default
 
+$color-text: #303032;
+$bg-color-basic: #faece9;
+
 $color-default-black:               #000000;
 $color-default-white:               #ffffff;
 $color-transparent:                 rgba(255, 255, 255, 0);
