--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -16,7 +16,9 @@
 // Blocks
 // ---------------------------------
 
-// @import "blocks/basic";
+@import "blocks/page-body.scss";
+@import "blocks/page-header.scss";
+@import "blocks/page-footer.scss";
 
 
 // ---------------------------------
